@@ -43,6 +43,16 @@ $tmp = array(
 		'xtype' => 'textfield',
 		'area' => 'ms2gallery_frontend',
 	),
+	'placeholders_tpl' => array(
+		'value' => '',
+		'xtype' => 'textfield',
+		'area' => 'ms2gallery_frontend',
+	),
+	'placeholders_thumbs' => array(
+		'value' => '',
+		'xtype' => 'textfield',
+		'area' => 'ms2gallery_frontend',
+	),
 );
 
 
