@@ -10,20 +10,21 @@ $_lang['area_ms2gallery_frontend'] = 'Сайт';
 
 $_lang['setting_ms2gallery_source_default'] = 'Источник файлов по умолчанию';
 $_lang['setting_ms2gallery_source_default_desc'] = 'Источник файлов для галереи изображений ресурса по умолчанию.';
-
 $_lang['setting_ms2gallery_thumbnail_size'] = 'Размер превью по умолчанию';
-$_lang['setting_ms2gallery_thumbnail_size_desc'] = 'Здесь вы можете указать размер заранее уменьшенной копии изображения для вставки поля "thumb" товара. Конечно, этот размер должен существовать и в настройках источника медиа, чтобы генерировались такие превью. В противном случае вы получите логотип minIShop2 вместо изображения в админке.';
-
+$_lang['setting_ms2gallery_thumbnail_size_desc'] = 'Здесь вы можете указать размер заранее уменьшенной копии изображения для вставки поля "thumb" товара. Конечно, этот размер должен существовать и в настройках источника медиа, чтобы генерировались такие превью. В противном случае вы получите логотип miniShop2 вместо изображения в админке.';
 $_lang['setting_ms2gallery_date_format'] = 'Формат даты';
 $_lang['setting_ms2gallery_date_format_desc'] = 'Укажите формат дат, используя синтаксис php функции strftime(). По умолчанию формат "%d.%m.%y %H:%M".';
+$_lang['setting_ms2gallery_disable_for_templates'] = 'Отключить показ у шаблонов';
+$_lang['setting_ms2gallery_disable_for_templates_desc'] = 'Перечислите id шаблонов через запятую, для которых не нужно выводить вкладку с галерей.';
 
 $_lang['setting_ms2gallery_set_placeholders'] = 'Включить авто-плейсхолдеры?';
 $_lang['setting_ms2gallery_set_placeholders_desc'] = 'Вы можете включить автоматическое выставление плейсхолдеров с изображениями на странице с гелереей.';
 $_lang['setting_ms2gallery_placeholders_prefix'] = 'Префикс плейсхолдеров';
-$_lang['setting_ms2gallery_placeholders_prefix_desc'] = 'Вы можете указать префикс для плейсхолдеров с изображениями - тогда они будут доступн на странице как [[+prefix.rank.field]]. Например: [[+ms2g.0.url]] или [[+ms2g.1.120x90]]. Плейсхолдер [[+prefix.rank]] выведет массив со всеми доступными свойствами файла.';
-
-$_lang['setting_ms2gallery_disable_for_templates'] = 'Отключить показ у шаблонов';
-$_lang['setting_ms2gallery_disable_for_templates_desc'] = 'Перечислите id шаблонов через запятую, для которых не нужно выводить вкладку с галерей.';
+$_lang['setting_ms2gallery_placeholders_prefix_desc'] = 'Вы можете указать префикс для плейсхолдеров с изображениями - тогда они будут доступны на странице как [[+prefix.rank.field]]. Например: [[+ms2g.0.url]] или [[+ms2g.1.120x90]]. Плейсхолдер [[+prefix.rank]] выведет массив со всеми доступными свойствами файла или оформленную картинку, если указан параметр "placeholders_tpl". Например, "[[+ms2g.1]]".';
+$_lang['setting_ms2gallery_placeholders_tpl'] = 'Шаблон плейсхолдеров';
+$_lang['setting_ms2gallery_placeholders_tpl_desc'] = 'Укажите имя ТВ параметра или чанка, для оформления вывода плейсхолдеров типа [[+ms2g.0]], [[+ms2g.1]] на странице. ТВ параметр должен быть назначен ресурсу, иначе будет использован чанк с тем же именем. Если ТВ и чанк не существуют или пусты, то вы получите распечатанный массив с данными изображения в этом плейсхолдере.';
+$_lang['setting_ms2gallery_placeholders_thumbs'] = 'Превью для плейсхолдеров';
+$_lang['setting_ms2gallery_placeholders_thumbs_desc'] = 'Укажите список размеров превью через запятую, которые нужно выбирать для выставления в плейсхолдеры. Например, "120х90,360x270".';
 
 $_lang['setting_ms2gallery_page_size'] = 'Файлов на странице';
 $_lang['setting_ms2gallery_page_size_desc'] = 'Вы можете задать количество выводимых файлов на странице, по умолчанию 20. 0 - вывести все.';
