@@ -4,6 +4,7 @@ Changelog for ms2Gallery.
 ==============
 - [#5] Added system setting for disabling gallery tab for specified templates.
 - [#3] Files are removed along with resources.
+- [#1] Added system setting for template placeholders with resource images.
 
 1.3.1-pl
 ==============
